# ad

./: .gitignore  roteiro_video.md
flask/: Curriculo do Proponente(1).docx  app.py  makefile  package-lock.json  pyproject.toml
flask/static/css/: face.css  face.min.css
flask/templates/: doc.html  layout-face.html  layout.html  post2.html  posts.html
