[tool.poetry]
name = "portifolio"
version = "0.1.0"
description = ""
authors = ["cesardddp"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
poetry = "^1.1.10"
Flask-Cors = "^3.0.10"
pymongo = "^3.12.0"
Flask-PyMongo = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
